# robocop

./: .gitignore  README.md  package-lock.json
AI/: README.md
AI/KNN_recognition/: add_person.py  database_update.py  database_update_local.py  face_recognition_test copy.py  face_recognition_test.py  face_recogniton_local.py  knn_training.py  main.py  socket_network.py  trained_knn_model.clf  web_dnn.py  web_knn.py
AI/siamese_recognition/: add_person_siamese.py  face_encodings.pkl  siamese_face_model.pth  siamese_predict.py  siamese_train_encoding.py  siamese_training.py
BACKEND/: backup_volume.sh
BACKEND/BACKEND_ROS_BRIDGE/: package-lock.json  package.json  server.js
BACKEND/BACKEND_ROS_BRIDGE/public/html/: index.html
BACKEND/BACKEND_ROS_BRIDGE/public/js/: app.js
BACKEND/BACKEND_WAS/: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Jenkinsfile  Procfile  README.md  docker-compose.yml  fly.toml  mongodb_backup.tar.REMOVED.git-id  pytest.ini  requirements.txt
BACKEND/BACKEND_WAS/app/: __init__.py  config.py  database.py  lidarsub.py  main (another copy).py  main.py  requirements.txt
BACKEND/BACKEND_WAS/app/camera/: camera_rtc.py
BACKEND/BACKEND_WAS/app/common/: constants.py  utils.py
BACKEND/BACKEND_WAS/app/core/: __init__.py  config.py  exceptions.py  security.py
BACKEND/BACKEND_WAS/app/models/: __init__.py  log.py  person.py  robot.py  route.py  schedule.py  user.py  video.py
BACKEND/BACKEND_WAS/app/routers/: __init__.py  auth.py  persons.py  robots.py  schedules.py  videos.py
BACKEND/BACKEND_WAS/app/schemas/: responses.py
BACKEND/BACKEND_WAS/app/tests/: conftest.py  test_api_responses.py  test_integration.py  (+1 more)
BACKEND/BACKEND_WAS/deploy/: deploy.sh
BACKEND/BACKEND_WAS/ros2-discovery/: Dockerfile
BACKEND/BACKEND_WAS/ros_parser/: requirements.txt  webRTC.py
BACKEND/BACKEND_WAS/rosbridge/: Dockerfile  cmd_vel_subscriber.py  robot_bridge.launch.xml  robot_publisher.py  ros_entrypoint.sh  test_publisher.py
BACKEND/FRONTEND_TEST/: .gitignore  package-lock.json  package.json  vite.config.js
BACKEND/ros_parser/: .gitignore  lidar_parser.py  requirements.txt  serv.py
FRONTEND/FRONTEND_WEB/: README.md  index.html  index2.html  package-lock.json  package.json  requirements.txt  tailwind.config.js  vite.config.js  ws.js
FRONTEND/FRONTEND_WEB/public/: sw.js
FRONTEND/FRONTEND_WEB/src/: App.vue  main.js
FRONTEND_WEB/: .gitignore  README.md  index.html  index2.html  package-lock.json  package.json  requirements.txt  tailwind.config.js  vercel.json  vite.config.js  ws.js
FRONTEND_WEB/public/: sw.js
FRONTEND_WEB/src/: App.vue  main.js
FRONTEND_WEB/src/assets/: tailwind.css  toast.css
FRONTEND_WEB/src/composables/: useUser.js
FRONTEND_WEB/src/router/: index.js
FRONTEND_WEB/src/services/: mapService.js  webSocketService.js  websocket.js
FRONTEND_WEB/src/stores/: notifications.js  robotCommands.js  robots.js
FRONTEND_WEB/src/views/: MonitoringView.vue
SIMULATE/: README.md
SIMULATE/GAZEBO_SIM/: How_To_RUN.md  README.md  ROS.excalidraw  Start_guide.md  requirements.md
SIMULATE/GAZEBO_SIM/Big_office_worldfile/: service.world
SIMULATE/GAZEBO_SIM/Isaac_sim_usd/: 250210(+GPS).usd  250210(+GPSTEST).usd  250210(+lidar perfect).usd  250210(base).usd  250211(1-add camera test).usd  250211(2-No_activate).usd  250211(add pegasus rotor).usd  250211(new).usd  250212(1. adding drive feature).usd  250212(3-simple envionment rigid body).usd  250212(4-fully attached imu,lidar,camera).usd  250212(5-drive).usd  250212(6-complete_ssafy).usd  250212(7- Isaac_bot).usd  basic gps 0.usd  basic gps0.usd  estsetsetsetset.usd  gpstest.usd  hihi.usd  lidar_test.usd  quadRobot (copy).usd  quadRobot.usd  real_quadRobot_lidar_base.usd  turtlebot_test.usd
SIMULATE/GAZEBO_SIM/ros2_ws/: C101_README.md  current_urdf.txt
SIMULATE/GAZEBO_SIM/ros2_ws/src/cal_velocity/: CMakeLists.txt  package.xml
SIMULATE/GAZEBO_SIM/ros2_ws/src/cal_velocity/src/: cal_velocity_node.cpp
SIMULATE/GAZEBO_SIM/ros2_ws/src/imu_velocity/: CMakeLists.txt  package.xml
SIMULATE/GAZEBO_SIM/ros2_ws/src/imu_velocity/src/: imu_velocity_node (아침).cpp  imu_velocity_node.cpp
SIMULATE/GAZEBO_SIM/ros2_ws/src/keyboard_input/: CMakeLists.txt  package.xml
SIMULATE/GAZEBO_SIM/ros2_ws/src/keyboard_input/src/: key_publisher (아침).cpp  key_publisher copy.cpp  key_publisher.cpp
SIMULATE/GAZEBO_SIM/ros2_ws/src/keyboard_teleop/: CMakeLists.txt  package.xml
SIMULATE/GAZEBO_SIM/ros2_ws/src/keyboard_teleop/src/: keyboard_teleop_node(남의코드).cpp  keyboard_teleop_node.cpp
SIMULATE/GAZEBO_SIM/ros2_ws/src/middle_teleop/: CMakeLists.txt  package.xml
SIMULATE/GAZEBO_SIM/ros2_ws/src/middle_teleop/src/: middle_teleop_node (simple_movement).cpp  middle_teleop_node (속도 다운 구현).cpp  middle_teleop_node (속도 다운 안되는 버전).cpp  middle_teleop_node (속도 발행 O, 동시입력 X).cpp  middle_teleop_node (아침).cpp  middle_teleop_node copy.cpp  middle_teleop_node.cpp  middle_teleop_node_copy.cpp
SIMULATE/GAZEBO_SIM/ros2_ws/src/path_saver/: CMakeLists.txt  package.xml
SIMULATE/GAZEBO_SIM/ros2_ws/src/path_saver/src/: path_saver_node.cpp  sdfa.txt
SIMULATE/GAZEBO_SIM/ssafy_ws/: map.excalidraw  navigateall.sh  pose_graph.g2o
SIMULATE/GAZEBO_SIM/ssafy_ws/src/robot_control_pkg/: CMakeLists.txt  package.xml
SIMULATE/GAZEBO_SIM/ssafy_ws/src/robot_control_pkg/src/: joystick_control.cpp  key_publisher.cpp  middle_teleop_node.cpp  robot_patrol.cpp
SIMULATE/GAZEBO_SIM/ssafy_ws/src/robot_status_publisher/: CMakeLists.txt  package.xml
SIMULATE/GAZEBO_SIM/ssafy_ws/src/robot_status_publisher/src/: imu_velocity_node.cpp  middle_teleop_node.cpp  one_robot_status_pub.cpp  robot_status_pub.cpp
SIMULATE/GAZEBO_SIM/ssafy_ws/src/robot_vision_pkg/: CMakeLists.txt  package.xml
SIMULATE/GAZEBO_SIM/ssafy_ws/src/robot_vision_pkg/src/: velodyne_detection.cpp
SIMULATE/GAZEBO_SIM/ssafy_ws/src/ukf_ros2/: CMakeLists.txt  README.md  package.xml
SIMULATE/GAZEBO_SIM/ssafy_ws/src/ukf_ros2/launch/: ukf.launch.py
SIMULATE/GAZEBO_SIM/ssafy_ws/src/ukf_ros2/src/: ukf.cpp
exec/: 1.포팅_매뉴얼_C101.docx  2.외부서비스 정보  4.시연_시나리오_C101.docx
(+437 files in other folders)
