<?xml version="1.0"?>
<package format="3">
  <name>keyboard_input</name>
  <version>0.0.0</version>
  <description>Package to publish keyboard input as ROS 2 topics</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- 빌드 도구 의존성 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 실행 시 필요한 의존성 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- 테스트 의존성 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 패키지 export 설정 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
